# Poker

./: .gitignore  README.md  ai_player.py  backend.py  cluster.py  dudo.py  exploitability.py  game_state.py  hand_abstraction.py  hand_table.py  kuhn.py  params.json  params.toml  play_against_slumbot.py  poker.py  poker_cfr.py  poker_utils.py  preflop_chart.py  progressbar_utils.py  rhode_flop_abstraction.pkl  rhode_flop_equities.pkl  rhode_island_holdem.py  rhode_trainer.py  rhode_utils.py  test.py  test_blotto.py  texas_hands.py  texas_holdem.py  texas_tests.py  texas_utils.py  trainer.py  trainer_utils.py
Modicum2/: hand_abstraction.py  rhode_flop_abstraction.pkl  rhode_flop_equities.pkl  rhode_island_holdem.py  rhode_strategy.txt  rhode_trainer.py
gui/: package-lock.json  package.json  tailwind.config.js
gui/public/: index.html
gui/src/: App.css  App.js  game.js
gui/src/components/: buttons.jsx  log.jsx  score.jsx  table.jsx
old/: blotto.py  dudo.py  poker_utils.py
other/: poker_cfr.py
python/: cluster.py  exploitability.py  hand_abstraction.py  hand_table.py  handtable2json.py  test.py  test_raise.py  texas_hands.py  texas_utils.py  trainer_utils.py
rust/: Cargo.toml
rust/benches/: benches.rs
rust/products/: strengths.json
rust/src/: backend.rs  bot.rs  card_abstraction.rs  card_utils.rs  cluster.rs  config.rs  exploiter.rs  lib.rs  main.rs  nodes.rs  preflop_chart.rs  ranges.rs  tests.rs  trainer.rs  trainer_utils.rs  validation.rs
rust/src/server/: backend.rs  main.rs
rust/tests/: tests.rs
