[package]
name = "optimus"
version = "0.1.0"
authors = ["Matthew Kennedy <mtthwknnd4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "*", features = ["derive"]}
serde_json = "*"
itertools = "*"
indicatif = "*"
rand = "*"
rayon = "*"
bio = "*"
bincode = "*"
statistical = "*"
once_cell = "*"
actix-web = "*"
actix-rt = "*"
actix-files = "*"
actix-cors = "*"
toml = "*"
rs_poker = "1.0.0"
moka = "*"
criterion = { version = "*", features = ["html_reports"] }
dashmap = "*"
smallvec = { version = "*", features = ["serde"] }

[profile.release]
debug = true
debug-assertions = false
incremental = true
# lto = true

[profile.dev]
debug = true
opt-level = 0

[[bench]]
name="benches"
harness=false

[[bin]]
name="server"
path="src/bin/server.rs"

[[bin]]
name="train"
path="src/bin/train.rs"

[[bin]]
name="exploit"
path="src/bin/exploit.rs"

[[bin]]
name = "preflop-chart"
path="src/bin/preflop_chart.rs"

