[package]
name = "optimus"
version = "0.1.0"
authors = ["Matthew Kennedy <mtthwknnd4@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
itertools = "*"
indicatif = "*"
rand = "*"
rayon = "*"
bincode = "*"
statistical = "*"
once_cell = "*"
actix-web = "*"
actix-rt = "*"
actix-files = "*"
actix-cors = "*"
toml = "*"
rs_poker = "*"
moka = { version = "*", features = ["sync"] }
criterion = { version = "*", features = ["html_reports"] }
smallvec = { version = "*", features = ["serde"] }
dashmap = { version = "*", features = ["serde"] }
ahash = { version = "*", features = ["serde"] }

[profile.release]
debug = true

[profile.dev]
opt-level = 1

[[bench]]
name = "benches"
harness = false

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "exploit"
path = "src/bin/exploit.rs"

[[bin]]
name = "preflop-chart"
path = "src/bin/preflop_chart.rs"
